--- a/MVCProject/Views/Admins/Registration.cshtml
+++ b/MVCProject/Views/Admins/Registration.cshtml
@@ -10,7 +10,7 @@
 {
     <div>
         Search By Name:@Html.TextBox("searchstring")
-        <input id="Submit1" type="submit" value="Filter"/>
+        <input id="Submit1" class="btn btn-primary" type="submit" value="Filter"/>
     </div>
 }
 <table class="table">
@@ -40,9 +40,6 @@
             @Html.DisplayFor(modelItem => item.Password)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Fact_Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Fact_Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Fact_Id })
         </td>
     </tr>
 }
@@ -52,7 +49,7 @@
 {
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Logout" class="btn btn-info" />
+            <input type="submit" value="Logout" class="btn btn-danger" />
         </div>
     </div>
 }
