--- a/MVCProject/Views/Faculties/Faculty_level1.cshtml
+++ b/MVCProject/Views/Faculties/Faculty_level1.cshtml
@@ -1,20 +1,23 @@
 ﻿@model MVCProject.ViewModel.NewStudentViewModel
 
 @{
-    ViewBag.Title = "Faculty_level1";
+    ViewBag.Title = "Faculty";
+    
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Faculty_level1</h2>
-
+<h2>Welcome Faculty</h2>
+@ViewBag.RegMsg
 @using (Html.BeginForm("Submit", "Faculties", FormMethod.Post, new { @class = "form-horizontal", role = "form" })) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Student</h4>
-        @Html.ActionLink("List of Students", "StudentList")
+        
+        @Html.ActionLink("List of Students", "StudentList").
+        
         <hr />
+        <h4>To Add Student:</h4>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.student.Name, htmlAttributes: new { @class = "control-label col-md-2" })
