--- a/MVCProject/Views/Shared/_Layout.cshtml
+++ b/MVCProject/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body style="background-color:#F5C469">
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top change_color">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
