--- a/MVCProject/Views/Students/Student_Details.cshtml
+++ b/MVCProject/Views/Students/Student_Details.cshtml
@@ -57,7 +57,7 @@
 {
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Logout" class="btn btn-info" />
+            <input type="submit" value="Logout" class="btn btn-danger" />
         </div>
     </div>
 }
